Working Wifi connection screen. Needs more work for loading and saving credentials in SPIFFS.

--- a/DevDashM5Core2/platformio.ini
+++ b/DevDashM5Core2/platformio.ini
@@ -12,7 +12,9 @@
 platform = espressif32
 board = m5stack-core2
 framework = arduino
-build_flags = -D LV_CONF_INCLUDE_SIMPLE -I src
-lib_deps =
+monitor_speed = 115200
+build_flags = -D LV_CONF_INCLUDE_SIMPLE -I include
+lib_deps = 
 	lvgl/lvgl@^9.3.0
 	m5stack/M5Core2@^0.2.0
+	m5stack/M5Unified@^0.2.7
